fix sidebar.css bug for login-box on mobile-devices
git-svn-id: https://svn.modified-shop.org/svn/modified-shop/trunk@12374 79ac0487-9261-4f26-a34d-858dee0dcce0

--- a/templates/tpl_modified_responsive/css/jquery.sidebar.css
+++ b/templates/tpl_modified_responsive/css/jquery.sidebar.css
@@ -126,7 +126,7 @@ body {
 
   #col_left {
     display: block;
-    padding:10px;
+    padding:10px 10px 300px 10px;
     background:#fafafa;
     width:280px;
   }
